kube/svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: sacredsteps
 name: sacredsteps-vite-app-svc
spec: 
  type: ClusterIP
  selector:
    app: sacredsteps-vite-app
  ports:
    - port: 80
      targetPort: 80
